# rustycoils

./: Cargo.toml  README.md
.github/workflows/: lint_format.yml
src/: axialobject.rs  fieldcalc.rs  lib.rs  parallel.rs  rayon.rs
tests/: analytical_single_coil_python_script.py  idealloop.rs
