[package]
name = "rustycoils"
version = "0.1.0"
authors = ["J.D.R. Tommey"]
edition = "2018"
description = "Fast method to compute off-axis magnetic fields for cylindrically symmetric systems of solenoids and current loops"
readme = "README.md"
repository = "https://github.com/jdrtommey/rustycoils"
license = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
GSL = "*"
