[package]
name = "rustycoils"
version = "0.1.0"
authors = ["J.D.R. Tommey"]
edition = "2018"
description = "Fast method to compute off-axis magnetic fields for cylindrically symmetric systems of solenoids and current loops"
readme = "README.md"
repository = "https://github.com/jdrtommey/rustycoils"
license = "MIT"
license-file = "LICENSE"
keywords = ["solenoid","magnetic","off-axis"]
categories = ["science"]
exclude = [".github/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {version = "1.5", optional=true,default-features=true}
ndarray= {version = "0.15",optional=true,default-features=true,features=["rayon"]}
[features]
default = []
parallel= ["rayon","ndarray"]

[dev-dependencies]
GSL = "*"
